--- a/WindowsPhone8/WorkTajm/Dashboard.xaml
+++ b/WindowsPhone8/WorkTajm/Dashboard.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="WorkTajm.MainPage"
+    x:Class="WorkTajm.Dashboard"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
