--- a/WindowsPhone8/WorkTajm/App.xaml
+++ b/WindowsPhone8/WorkTajm/App.xaml
@@ -3,11 +3,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+    xmlns:navigation="clr-namespace:System.Windows.Navigation;assembly=Microsoft.Phone" >
 
     <!--Application Resources-->
     <Application.Resources>
         <local:LocalizedStrings xmlns:local="clr-namespace:WorkTajm" x:Key="LocalizedStrings"/>
+        <navigation:UriMapper x:Name="uriMapper">
+            <navigation:UriMapping Uri="/MainPage.xaml" />
+        </navigation:UriMapper>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
