--- a/WindowsPhone8/WorkTajm/Views/Dashboard.xaml
+++ b/WindowsPhone8/WorkTajm/Views/Dashboard.xaml
@@ -47,7 +47,7 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-
+            <phone:LongListSelector HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="Auto" Height="Auto"/>
         </Grid>
 
         <!--Uncomment to see an alignment grid to help ensure your controls are
